--- a/.github/workflows/scrape-rossmann.yml
+++ b/.github/workflows/scrape-rossmann.yml
@@ -1,15 +1,15 @@
 name: scrape-rossmann
 
 on:
-  workflow_dispatch:        # ręczne odpalanie z UI
+  workflow_dispatch:
   schedule:
-    - cron: '30 4 * * *'    # codziennie 06:30 Europe/Warsaw (latem); 05:30 zimą
+    - cron: '30 4 * * *'    # 06:30 w Warszawie (lato)
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
-    # KLUCZ: odpalamy w obrazie z już zainstalowanymi przeglądarkami Playwright
+    # Obraz z gotowym Playwrightem i przeglądarkami
     container:
       image: mcr.microsoft.com/playwright/python:v1.45.0-jammy
 
@@ -17,14 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Jeśli masz requirements.txt – zainstaluje; jeśli nie, spróbuje z pyproject (editable)
-      - name: Install Python deps
+      - name: Upgrade pip + install deps
         run: |
+          python -m pip install --upgrade pip setuptools wheel
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
-          fi
-          if [ -f pyproject.toml ]; then
-            python -m pip install -e .
           fi
 
       - name: Run scraper
