--- a/.github/workflows/scrape-rossmann.yml
+++ b/.github/workflows/scrape-rossmann.yml
@@ -19,10 +19,10 @@ jobs:
         shell: bash
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Upgrade pip + install deps
+      - name: "Upgrade pip + install deps"
         run: |
           python -m pip install --upgrade pip setuptools wheel
           if [ -f requirements.txt ]; then
@@ -35,7 +35,7 @@ jobs:
             pip install -r requirements.txt
           fi
 
-      - name: Sanity check Playwright
+      - name: "Sanity check Playwright"
         env:
           PYTHONUNBUFFERED: "1"
         run: |
@@ -52,7 +52,7 @@ jobs:
           asyncio.run(t())
           PY
 
-      - name: Smoke-test: zapisz screenshot do data/
+      - name: "Smoke-test: zapisz screenshot do data/"
         env:
           PYTHONUNBUFFERED: "1"
         run: |
@@ -72,7 +72,7 @@ jobs:
           asyncio.run(main())
           PY
 
-      - name: Run scraper (debug) + list outputs
+      - name: "Run scraper (debug) + list outputs"
         env:
           LOGURU_LEVEL: DEBUG
           PYTHONUNBUFFERED: "1"
@@ -88,7 +88,7 @@ jobs:
             sed -n '1,200p' data/rossmann/*/health_report.json
           fi
 
-      - name: Upload artifact (data/)
+      - name: "Upload artifact (data/)"
         uses: actions/upload-artifact@v4
         with:
           name: data-${{ github.run_id }}
