--- a/.github/workflows/scrape-rossmann.yml
+++ b/.github/workflows/scrape-rossmann.yml
@@ -35,6 +35,10 @@ jobs:
             pip install -r requirements.txt
           fi
 
+        - name: Install Playwright browsers + system deps
+        run: |
+          python -m playwright install --with-deps chromium
+
       - name: "Sanity check Playwright"
         env:
           PYTHONUNBUFFERED: "1"
