--- a/.github/workflows/scrape-rossmann.yml
+++ b/.github/workflows/scrape-rossmann.yml
@@ -9,24 +9,21 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
     container:
       image: mcr.microsoft.com/playwright/python:v1.54.0-jammy
 
-    # używaj bash we wszystkich krokach
     defaults:
       run:
         shell: bash
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: "Upgrade pip + install deps"
+      - name: Upgrade pip + install deps
         run: |
           python -m pip install --upgrade pip setuptools wheel
           if [ -f requirements.txt ]; then
-            # pinujemy do 1.54.0 (zgodnie z obrazem)
             if grep -qE '^playwright' requirements.txt; then
               sed -i 's/^playwright.*/playwright==1.54.0/' requirements.txt
             else
@@ -34,6 +31,10 @@ jobs:
             fi
             pip install -r requirements.txt
           fi
+
+      - name: Install Playwright browsers + system deps
+        run: |
+          python -m playwright install --with-deps chromium
 
         - name: Install Playwright browsers + system deps
         run: |
